--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -1,5 +1,6 @@
 @use 'variables' as vars;
 @use 'mixins' as mix;
+@use 'functions' as func;
 
 *,
 *::before,
@@ -20,25 +21,25 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 // typography
 
 .text-xl {
-  font-size: 32px;
-  line-height: 42px;
+  font-size: func.px-to-rem(32);
+  line-height: func.px-to-rem(42);
 }
 
 .text-l {
-  font-size: 24px;
-  line-height: 32px;
+  font-size: func.px-to-rem(24);
+  line-height: func.px-to-rem(32);
 }
 .text-m {
-  font-size: 18px;
-  line-height: 24px;
+  font-size: func.px-to-rem(18);
+  line-height: func.px-to-rem(24);
 }
 .text-s {
-  font-size: 16px;
-  line-height: 20px;
+  font-size: func.px-to-rem(16);
+  line-height: func.px-to-rem(20);
 }
