--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -29,11 +29,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: func.px-to-rem(16);
-
-  @include mix.tablet {
-    padding: func.px-to-rem(16) func.px-to-rem(32);
-  }
+  padding: 1rem clamp(1rem, 4vw, 2rem);
 
   input {
     background-color: inherit;
@@ -66,12 +62,8 @@
 // body
 .password__body {
   background-color: vars.$grey-800;
-  padding: func.px-to-rem(16);
+  padding: clamp(1rem, 3vw, 1.5rem) clamp(1rem, 4vw, 2rem);
   width: 100%;
-
-  @include mix.tablet {
-    padding: func.px-to-rem(24) func.px-to-rem(32);
-  }
 }
 
 .password__slider {
@@ -150,7 +142,7 @@
   display: flex;
   flex-direction: column;
   gap: func.px-to-rem(16);
-  padding: func.px-to-rem(32) 0;
+  padding: clamp(1.5rem, 4vw, 2rem) 0;
 
   .checkbox__label {
     display: flex;
@@ -211,8 +203,10 @@
 }
 .details__group {
   display: flex;
-  // justify-content: right;
+  justify-content: flex-end;
   align-items: center;
+  position: relative;
+  gap: 15px;
 
   .level__label {
     color: vars.$grey-200;
@@ -241,7 +235,7 @@
 
 .btn {
   width: 100%;
-  padding: func.px-to-rem(16) func.px-to-rem(104);
+  padding: clamp(1rem, 3vw, 1.5rem) clamp(4rem, 10vw, 6.5rem);
   background: vars.$accent-green;
   color: vars.$grey-800;
   font-weight: 500;
@@ -254,7 +248,6 @@
   gap: func.px-to-rem(16);
 
   @include mix.tablet {
-    padding: func.px-to-rem(24) auto;
     font-size: func.px-to-rem(18);
     line-height: func.px-to-rem(24);
   }
