--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -1,11 +1,11 @@
 @mixin tablet {
-  @media (min-width: 768px) {
+  @media (min-width: 48rem) {
     @content;
   }
 }
 // not used
 @mixin desktop {
-  @media (min-width: 1024px) {
+  @media (min-width: 64rem) {
     @content;
   }
 }
